// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPagination should match its snapshot with props 1`] = `
<div
  className="pagenationBox"
>
  <ul
    className="pagenationBoxUl"
  >
    <li
      className="pagination--1 pagenationBoxLi"
      onClick={[Function]}
    >
      <span>
        
      </span>
    </li>
    <li
      className="pagenationBoxCurrentPage"
      onClick={[Function]}
    >
      <span>
        1
      </span>
    </li>
    <li
      className="pagination-2 pagenationBoxLi"
      onClick={[Function]}
    >
      <span>
        2
      </span>
    </li>
    <li
      className="pagination-3 pagenationBoxLi"
      onClick={[Function]}
    >
      <span>
        3
      </span>
    </li>
    <li
      className="pagination-dot pagenationBoxLi"
      onClick={[Function]}
    >
      <span>
        ...
      </span>
    </li>
    <li
      className="pagination-10 pagenationBoxLi"
      onClick={[Function]}
    >
      <span>
        10
      </span>
    </li>
    <li
      className="pagination-0 pagenationBoxLi"
      onClick={[Function]}
    >
      <span>
        
      </span>
    </li>
  </ul>
</div>
`;

exports[`ListPagination should mount without props  1`] = `
<ListPagination>
  <div
    className="pagenationBox"
  >
    <ul
      className="pagenationBoxUl"
    >
      <PageNumber
        page={-1}
      >
        <li
          className="pagination--1 pagenationBoxLi"
          onClick={[Function]}
        >
          <span />
        </li>
      </PageNumber>
      <PageNumber
        page={1}
      >
        <li
          className="pagination-1 pagenationBoxLi"
          onClick={[Function]}
        >
          <span>
            1
          </span>
        </li>
      </PageNumber>
      <PageNumber
        page="..."
      >
        <li
          className="pagination-dot pagenationBoxLi"
          onClick={[Function]}
        >
          <span>
            ...
          </span>
        </li>
      </PageNumber>
      <PageNumber
        page={0}
      >
        <li
          className="pagination-0 pagenationBoxLi"
          onClick={[Function]}
        >
          <span />
        </li>
      </PageNumber>
    </ul>
  </div>
</ListPagination>
`;
